environments/gloo-edge/gateway-api/httpbin-app/glootest.com/httpbin-all-in-one-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin-all-in-one-route
  namespace: httpbin
  labels:
    example: httpbin-route
    gateway: https
spec:
  hostnames:
  - "httpbin.glootest.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: httpbin
          port: 8000
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: httpbin-route-policies
